# dirtyflag

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/df/: dirtyflag.h
tests/testdirtyflag/: CMakeLists.txt  main.cpp
